--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,6 +7,10 @@ body{
 }
 h1{
 	text-align: center;
+	color:purple;/*color de la letra*/
+	background: #e0c8c8 ;
+	text-shadow: -5px -5px 5px #e8d8d8,2px 1px red;
+	
 }
 p{
 	text-align: center;
